sfexchange-dreamforce-project/src/objects/UserQuizzSignup__c.object
<CustomObject>
    <description>Used to sign up a user to a Quizz</description>
    <fields>
        <fullName>ActiveQuizz__c</fullName>
        <formula>QuizzRef__r.IsActive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Quizz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuizzNameAuto__c</fullName>
        <formula>QuizzRef__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuizzName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuizzRef__c</fullName>
        <label>Quizz</label>
        <referenceTo>Quizz__c</referenceTo>
        <relationshipLabel>User Quizz Signups</relationshipLabel>
        <relationshipName>User_Quizz_Signups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UserRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Quizz_Signups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Quizz Signup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UserRef__c</columns>
        <columns>QuizzRef__c</columns>
        <columns>ActiveQuizz__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Sigup {0000}</displayFormat>
        <label>Signup #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Quizz Signups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>